tests/miniJava/neg/004937_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , static int [] java ) { return 0 ; } }
